# shida-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/ffi/: app_config.rs  log.rs  mod.rs
src/modules/: lib_module.rs  mod.rs
src/system/: cli_args.rs  error.rs  init.rs  mod.rs
