[package]
name = "shida-cli"
version = "0.1.0"
authors = ["Sergei Beljakov <1899416+tasmanianfox@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

shida-core = { path ="../shida-core" }